--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "chai-as-promised": "^4.3.0",
     "expect.js": "^0.3.1",
     "mocha": "^2.2.1",
+    "moment": "^2.9.0",
     "parse": "^1.3.5",
+    "parse-mock": "^1.0.5",
     "requirejs": "^2.1.16",
     "sinon": "^1.14.1",
     "underscore": "^1.8.2"
